--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp styles"
+    "build": "gulp styles",
+    "deploy": "gh-pages -d src"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "browser-sync": "^2.26.14",
+    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
